Add New Section

--- a/ForgotPassword.html
+++ b/ForgotPassword.html
@@ -78,19 +78,19 @@
                 <h2>Forgot Password</h2>
             </div>
         </section>
-        <section id="login-form">
+        <section id="forgot-password-form">
             <div class="container">
                 <div class="login">
                     <h2>Forgot Password</h2>
                 </div>
-                <div class="username-label">
+                <div class="email-label">
                     <label for="">Email *</label>
                 </div>
-                <div class="username-input">
+                <div class="email-input">
                     <input type="email">
                 </div>
 
-                <div class="login-button">
+                <div class="send-button">
                     <button>Send</button>
                 </div>
 
