--- a/Home.html
+++ b/Home.html
@@ -116,24 +116,25 @@
                 <div class="row">
                     <div class="category">
                         <ul id="myBtnContainer">
-                            <li class="item active" data-id="all"><a href="#" class="btn-tab"
-                                    onclick="filterSelection('all')">All</a></li>
-                            <li class="item" data-id="bestsellers">
-                                <a class="btn-tab" onclick="filterSelection('bestsellers')">Best Sellers</a>
+                            <li class="item active btn-tab" onclick="filterSelection('all')" data-id="all"><a>All</a>
                             </li>
-                            <li class="item" data-id="fantasy"><a class="btn-tab"
-                                    onclick="filterSelection('fantasy')">Fantasy</a></li>
-                            <li class="item" data-id="history"><a class="btn-tab"
-                                    onclick="filterSelection('history')">History</a></li>
-                            <li class="item" data-id="art"><a class="btn-tab" onclick="filterSelection('art')">Art</a>
+                            <li class="item btn-tab" onclick="filterSelection('bestsellers')" data-id="bestsellers">
+                                <a>Best Sellers</a>
                             </li>
-                            <li class="item" data-id="lovestories"><a class="btn-tab"
-                                    onclick="filterSelection('lovestories')">Love Stories</a></li>
+                            <li class="item btn-tab" onclick="filterSelection('fantasy')" data-id="fantasy"><a
+                                    class="btn-tab">Fantasy</a></li>
+                            <li class="item btn-tab" onclick="filterSelection('history')" data-id="history"><a
+                                    class="btn-tab">History</a></li>
+                            <li class="item btn-tab" data-id="art"><a class="btn-tab"
+                                    onclick="filterSelection('art')">Art</a>
+                            </li>
+                            <li class="item btn-tab" onclick="filterSelection('lovestories')" data-id="lovestories"><a
+                                    class="btn-tab">Love Stories</a></li>
                         </ul>
                     </div>
 
-                    
-                    <div class="col-3 filterDiv fantasy">
+
+                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv fantasy all">
                         <div class="products" data-id="1">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-1.jpg" alt=""></a>
                             <div class="name">
@@ -148,7 +149,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv fantasy">
+                    <div class="col-3 filterDiv fantasy all">
                         <div class="products" data-id="2">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-2.jpg" alt=""></a>
                             <div class="name">
@@ -163,7 +164,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv bestsellers">
+                    <div class="col-3 filterDiv bestsellers all">
                         <div class="products" data-id="3">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-3.jpg" alt=""></a>
                             <div class="name">
@@ -178,7 +179,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv history">
+                    <div class="col-3 filterDiv history all">
                         <div class="products" data-id="4">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-4.jpg" alt=""></a>
                             <div class="name">
@@ -193,7 +194,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv bestsellers history">
+                    <div class="col-3 filterDiv bestsellers history all">
                         <div class="products" data-id="5">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-5.jpg" alt=""></a>
                             <div class="name">
@@ -208,7 +209,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv art">
+                    <div class="col-3 filterDiv art all">
                         <div class="products" data-id="6">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-6.jpg" alt=""></a>
                             <div class="name">
@@ -223,7 +224,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv art">
+                    <div class="col-3 filterDiv art all">
                         <div class="products" data-id="7">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-7.jpg" alt=""></a>
                             <div class="name">
@@ -238,7 +239,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv bestsellers lovestories">
+                    <div class="col-3 filterDiv bestsellers lovestories all">
                         <div class="products" data-id="8">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-8.jpg" alt=""></a>
                             <div class="name">
@@ -253,7 +254,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv lovestories">
+                    <div class="col-3 filterDiv lovestories all">
                         <div class="products" data-id="9">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-9.jpg" alt=""></a>
                             <div class="name">
@@ -268,7 +269,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv lovestories">
+                    <div class="col-3 filterDiv lovestories all">
                         <div class="products" data-id="10">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-10.jpg" alt=""></a>
                             <div class="name">
@@ -283,7 +284,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv fantasy">
+                    <div class="col-3 filterDiv fantasy all">
                         <div class="products" data-id="11">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-11.webp" alt=""></a>
                             <div class="name">
@@ -298,7 +299,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv lovestories fantasy">
+                    <div class="col-3 filterDiv lovestories fantasy all">
                         <div class="products" data-id="2">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-12.png" alt=""></a>
                             <div class="name">
@@ -313,9 +314,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="show-more">
-                        <button class="btn btn-success">Show More</button>
-                    </div>
+
                 </div>
             </div>
         </section>
@@ -676,7 +675,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" <script
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
         integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
         crossorigin="anonymous"></script>
@@ -690,59 +689,6 @@
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/home.js"></script>
     <script src="./assets/js/custom.js"></script>
-
-    <!-- <script>
-
-
-        filterSelection("all")
-        function filterSelection(c) {
-            console.log("click;ar");
-            var x, i;
-            x = document.getElementsByClassName("filterDiv");
-            console.log();
-            if (c == "all") c = "";
-            for (i = 0; i < x.length; i++) {
-                w3RemoveClass(x[i], "show");
-                if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
-            }
-        }
-
-        function w3AddClass(element, name) {
-            var i, arr1, arr2;
-            arr1 = element.className.split(" ");
-            arr2 = name.split(" ");
-            for (i = 0; i < arr2.length; i++) {
-                if (arr1.indexOf(arr2[i]) == -1) { element.className += " " + arr2[i]; }
-            }
-        }
-
-        function w3RemoveClass(element, name) {
-            var i, arr1, arr2;
-            arr1 = element.className.split(" ");
-            arr2 = name.split(" ");
-            for (i = 0; i < arr2.length; i++) {
-                while (arr1.indexOf(arr2[i]) > -1) {
-                    arr1.splice(arr1.indexOf(arr2[i]), 1);
-                }
-            }
-            element.className = arr1.join(" ");
-        }
-
-        // Add active class to the current button (highlight it)
-        var btnContainer = document.getElementById("myBtnContainer");
-        var btns = btnContainer.getElementsByClassName("btn-tab");
-
-        for (var i = 0; i < btns.length; i++) {
-
-            btns[i].addEventListener("click", function () {
-                console.log(this.parentNode);
-                var current = document.getElementsByClassName("active");
-                console.log(current);
-                current[0].className = current[0].className.replace(" active", "");
-                this.parentNode.className += " active";
-            });
-        }
-    </script> -->
 </body>
 
 </html>
