--- a/ProductDetail.html
+++ b/ProductDetail.html
@@ -224,18 +224,18 @@
             <div class="container">
                 <div class="tab-menu">
                     <ul id="myBtnContainer">
-                        <li class="item1 active" data-id="description"><a href="#" class="btn-tab"
-                                onclick="filterSelection('description')">Description</a></li>
-                        <li class="item2" data-id="additional">
-                            <a class="btn-tab" onclick="filterSelection('additional')">
+                        <li  onclick="filterSelection('description')" class="item1 active btn-tab" data-id="description"><a>Description</a>
+                        </li>
+                        <li onclick="filterSelection('additional')" class="item2 btn-tab" data-id="additional">
+                            <a >
                                 Additional</a>
                         </li>
-                        <li class="item3" data-id="reviews"><a class="btn-tab"
-                                onclick="filterSelection('reviews')">Reviews <span>(0)</span></a></li>
+                        <li onclick="filterSelection('reviews')" class="item3 btn-tab" data-id="reviews"><a>Reviews <span>(0)</span></a>
+                        </li>
                     </ul>
                 </div>
 
-                <div class="description filterDiv description">
+                <div class="filterDiv description">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
