Add New Section

--- a/Cart.html
+++ b/Cart.html
@@ -77,7 +77,6 @@
                 <h2>Cart</h2>
             </div>
         </section>
-
         <section id="products">
             <div class="container">
                 <div class="basket-products">
@@ -198,9 +197,6 @@
     </footer>
 
 
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
@@ -215,6 +211,7 @@
     <script src="./assets/slick-1.8.1/slick/slick.js"></script>
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/cart.js"></script>
+    <script src="./assets/js/common.js"></script>
 </body>
 
 </html>
