--- a/ForgotPassword.html
+++ b/ForgotPassword.html
@@ -62,7 +62,7 @@
                             <div class="border"></div>
                         </div>
                         <div class="login-register d-none">
-                            <a href="#">Login</a>
+                            <a href="Login.html">Login</a>
                             <div class="border"></div>
                             <a href="Register.html">Register</a>
                         </div>
@@ -173,6 +173,7 @@
         </section>
     </footer>
 
+    
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
@@ -187,6 +188,7 @@
     <script src="./assets/slick-1.8.1/slick/slick.js"></script>
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/forgotpassword.js"></script>
+    <script src="./assets/js/common.js"></script>
 </body>
 
 </html>
