--- a/Home.html
+++ b/Home.html
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv fantasy all">
+                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv fantasy all">
                         <div class="products" data-id="2">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-2.jpg" alt=""></a>
                             <div class="name">
@@ -164,7 +164,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv bestsellers all">
+                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv bestsellers all">
                         <div class="products" data-id="3">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-3.jpg" alt=""></a>
                             <div class="name">
@@ -179,7 +179,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv history all">
+                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv history all">
                         <div class="products" data-id="4">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-4.jpg" alt=""></a>
                             <div class="name">
@@ -194,7 +194,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv bestsellers history all">
+                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv bestsellers history all">
                         <div class="products" data-id="5">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-5.jpg" alt=""></a>
                             <div class="name">
@@ -209,7 +209,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv art all">
+                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv art all">
                         <div class="products" data-id="6">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-6.jpg" alt=""></a>
                             <div class="name">
@@ -224,7 +224,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv art all">
+                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv art all">
                         <div class="products" data-id="7">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-7.jpg" alt=""></a>
                             <div class="name">
@@ -239,7 +239,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv bestsellers lovestories all">
+                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv bestsellers lovestories all">
                         <div class="products" data-id="8">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-8.jpg" alt=""></a>
                             <div class="name">
@@ -254,7 +254,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv lovestories all">
+                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv lovestories all">
                         <div class="products" data-id="9">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-9.jpg" alt=""></a>
                             <div class="name">
@@ -269,7 +269,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv lovestories all">
+                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv all">
                         <div class="products" data-id="10">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-10.jpg" alt=""></a>
                             <div class="name">
@@ -284,7 +284,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv fantasy all">
+                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv fantasy all">
                         <div class="products" data-id="11">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-11.webp" alt=""></a>
                             <div class="name">
@@ -299,7 +299,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 filterDiv lovestories fantasy all">
+                    <div class="col-lg-3 col-md-2 col-sm-1 filterDiv fantasy all">
                         <div class="products" data-id="2">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-12.png" alt=""></a>
                             <div class="name">
@@ -689,6 +689,7 @@
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/home.js"></script>
     <script src="./assets/js/custom.js"></script>
+    <script src="./assets/js/common.js"></script>
 </body>
 
 </html>
