--- a/Blog.html
+++ b/Blog.html
@@ -433,6 +433,7 @@
     <script src="./assets/slick-1.8.1/slick/slick.js"></script>
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/blog.js"></script>
+    <script src="./assets/js/common.js"></script>
 </body>
 
 </html>
