--- a/Login.html
+++ b/Login.html
@@ -211,6 +211,7 @@
     <script src="./assets/slick-1.8.1/slick/slick.js"></script>
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/login.js"></script>
+    <script src="./assets/js/common.js"></script>
 </body>
 
 </html>
