--- a/ProductDetail.html
+++ b/ProductDetail.html
@@ -64,7 +64,7 @@
                         <div class="login-register d-none">
                             <a href="Login.html">Login</a>
                             <div class="border"></div>
-                            <a href="#">Register</a>
+                            <a href="Register.html">Register</a>
                         </div>
                     </div>
                 </div>
@@ -462,6 +462,7 @@
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/productdetail.js"></script>
     <script src="./assets/js/custom.js"></script>
+    <script src="./assets/js/common.js"></script>
 </body>
 
 </html>
