--- a/Register.html
+++ b/Register.html
@@ -215,6 +215,7 @@
     <script src="./assets/slick-1.8.1/slick/slick.js"></script>
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/register.js"></script>
+    <script src="./assets/js/common.js"></script>
 </body>
 
 </html>
