--- a/Shop.html
+++ b/Shop.html
@@ -614,6 +614,7 @@
     <script src="./assets/slick-1.8.1/slick/slick.js"></script>
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/shop.js"></script>
+    <script src="./assets/js/common.js"></script>
 </body>
 
 </html>
