--- a/Wishlist.html
+++ b/Wishlist.html
@@ -93,7 +93,7 @@
 
                         </tbody>
                         <tr>
-                            <td><button class="btn btn-primary btn"><a href="">Continue shopping</a></button></td>
+                            <td><button class="btn btn-primary btn"><a href="Shop.html">Continue shopping</a></button></td>
                             <td></td>
                             <td></td>
 
@@ -186,11 +186,8 @@
     </footer>
 
 
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" <script
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
         integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
         crossorigin="anonymous"></script>
@@ -203,5 +200,6 @@
     <script src="./assets/slick-1.8.1/slick/slick.js"></script>
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/wishlist.js"></script>
+    <script src="./assets/js/common.js"></script>
 </body>
 </html>
